fix whitespace wrapping issue move button trying to get form working again ...

--- a/templates/css/style.css
+++ b/templates/css/style.css
@@ -683,3 +683,7 @@ header {
 .breadcrumb-trail {
 	margin-top: 8px;
 }
+
+.media .desc {
+	white-space: normal;
+}
